objects/Process_Builder_Schedule__c.object
<CustomObject>
    <description>Inspired by idea &quot;Ability to Schedule When Process Builder Triggers&quot; by Marie Chandra https://success.salesforce.com/ideaView?id=08730000000DjEmAAK</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true then process will be scheduled. When inactive then scheduled job will be aborted at its next run time.</description>
        <inlineHelpText>When checked then process will be scheduled. If unchecked, or if this record is deleted, then at next scheduled run the job will be aborted.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cron_Expression__c</fullName>
        <description>How often the job should be scheduled to run. See https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_scheduler.htm for help with creating cron expression.</description>
        <inlineHelpText>How often the job should be scheduled to run. See https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/apex_scheduler.htm for help with creating cron expression.</inlineHelpText>
        <label>Cron Expression</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Why do you need this process scheduled? Your future self will thank you for filling this in =)</description>
        <inlineHelpText>Why do you need this process scheduled? Your future self will thank you for filling this in =)</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <description>Computed name for the scheduled job. This will be the name of the CronJobDetail record that represents the schedule.</description>
        <formula>Process_API_Name__c &amp; &apos;_&apos; &amp; Id</formula>
        <inlineHelpText>Computed name for the scheduled job. This will be the name of the CronJobDetail record that represents the schedule.</inlineHelpText>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_API_Name__c</fullName>
        <description>The unique name of your Process Builder to schedule.</description>
        <inlineHelpText>The unique name of your Process Builder to schedule.</inlineHelpText>
        <label>Process API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Times_Triggered__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How many times has the scheduled process been triggered?</description>
        <inlineHelpText>How many times has the scheduled process been triggered?</inlineHelpText>
        <label>Times Triggered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Process Builder Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Process_API_Name__c</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <columns>Cron_Expression__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Builder Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>